@@ -1,0 +1,7 @@
+extern int xxx;
+
+int
+main ()
+{ 
+  return xxx;
+}
